# bloomy-python

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Gemfile  README.md  bloomy.gemspec  context7.json  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: api-feature-developer.md  code-quality-reviewer.md  mkdocs-documentation-writer.md  sdk-product-manager.md  sdk-test-engineer.md  version-control-engineer.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: deploy_docs.yml  docs.yml  main.yml  quality.yml  release.yml  tests.yml
docs/: README.md  index.md
docs/api/: async_client.md  client.md  configuration.md  exceptions.md
docs/api/async_operations/: meetings.md  todos.md  users.md
docs/api/operations/: goals.md  headlines.md  issues.md  meetings.md  scorecard.md  todos.md  users.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: async.md  authentication.md  bulk-operations.md  errors.md  usage.md
examples/: basic_usage.py
exe/: bloomy
lib/: bloomy.rb
lib/bloomy/: client.rb  configuration.rb  version.rb
lib/bloomy/operations/: goals.rb  headlines.rb  issues.rb  meetings.rb  scorecard.rb  todos.rb  users.rb
lib/bloomy/utils/: get_user_id.rb
sig/: bloomy.rbs
spec/: bloomy_config_spec.rb  bloomy_goals_spec.rb  bloomy_headlines_spec.rb  bloomy_issues_spec.rb  bloomy_meetings_spec.rb  bloomy_spec.rb  bloomy_todos_spec.rb  bloomy_users_spec.rb  spec_helper.rb
src/bloomy/: __init__.py  async_client.py  client.py  configuration.py  models.py
src/bloomy/operations/: goals.py  headlines.py  issues.py  meetings.py  scorecard.py  todos.py  users.py
src/bloomy/operations/async_/: __init__.py  goals.py  headlines.py  issues.py  meetings.py  scorecard.py  todos.py  users.py
src/bloomy/operations/mixins/: __init__.py  goals_transform.py  headlines_transform.py  issues_transform.py  meetings_transform.py  todos_transform.py  users.py  users_transform.py
src/bloomy/utils/: abstract_operations.py  async_base_operations.py  base_operations.py
tests/: __init__.py  conftest.py  test_abstract_operations.py  test_adversarial_issues_headlines.py  test_adversarial_meetings.py  test_adversarial_todos_goals.py  test_adversarial_users.py  test_async_base_operations.py  test_async_client.py  test_async_goals.py  test_async_headlines.py  test_async_issues.py  test_async_meetings.py  test_async_meetings_extra.py  test_async_scorecard.py  test_async_todos.py  test_async_todos_extra.py  test_async_users.py  test_async_users_extra.py  test_base_operations.py  test_bulk_operations.py  test_client.py  test_configuration.py  test_exceptions.py  test_goals.py  test_headlines.py  test_integration_goals.py  test_integration_headlines.py  test_integration_issues.py  test_integration_meetings.py  test_integration_scorecard.py  test_integration_todos.py  test_integration_users.py  test_issues.py  test_meetings.py  test_misc_coverage.py  test_models_validators.py  test_scorecard.py  test_todos.py  test_users.py
